// Bun Snapshot v1, https://bun.sh/docs/test/snapshots

exports[`searchCommand CLI searches connector actions with text output 1`] = `
{
  "exitCode": 0,
  "stderr": "",
  "stdout": 
"gmail.send_mail
Send a Gmail message.
Authenticated: yes
"
,
}
`;

exports[`searchCommand CLI supports connector search with json output 1`] = `
{
  "exitCode": 0,
  "stderr": "",
  "stdout": 
"[{"authenticated":false,"description":"Send a Gmail message.","name":"send_mail","service":"gmail"}]
"
,
}
`;

exports[`searchCommand CLI renders no-results output when there are no connector actions 1`] = `
{
  "exitCode": 0,
  "stderr": "",
  "stdout": 
"No matching connector actions were found.
"
,
}
`;

exports[`searchCommand CLI renders search help when text argument is omitted 1`] = `
{
  "expectedHelp": {
    "exitCode": 0,
    "stderr": "",
    "stdout": 
"Search connector actions with one free-form query.

Arguments:
  text                   Search text

Options:
  --format <format>      Specify output format (use json for structured output)
  --json                 Alias for --format=json
  --show-schema-version  Include schemaVersion in JSON output (no effect without
                         --json)
  --keywords <keywords>  Specify comma-separated keywords to refine the
                         connector action search
  -h, --help             Show help for command

Global Options:
  -V, --version          Show the current version
  --debug                Print the current log file path when the CLI exits
  --lang <lang>          Specify the display language
"
,
  },
  "result": {
    "exitCode": 0,
    "stderr": "",
    "stdout": 
"Search connector actions with one free-form query.

Arguments:
  text                   Search text

Options:
  --format <format>      Specify output format (use json for structured output)
  --json                 Alias for --format=json
  --show-schema-version  Include schemaVersion in JSON output (no effect without
                         --json)
  --keywords <keywords>  Specify comma-separated keywords to refine the
                         connector action search
  -h, --help             Show help for command

Global Options:
  -V, --version          Show the current version
  --debug                Print the current log file path when the CLI exits
  --lang <lang>          Specify the display language
"
,
  },
}
`;
